--- a/index.html
+++ b/index.html
@@ -10,6 +10,93 @@
 <body>
     <h1>Which programming language is right for you?</h1>
     <p>Choosing a programming language to study can be a tough decision. Answer some simple questions and we'll tell you which one is right for you!</p>
+    <div class="container">
+        <form id="mainForm">
+            <p> First things first, what's your name?</p>
+            <label for="firstName">Name</label>
+            <input id="firstName" type="text"><br /><br />
+
+            <p>And where are you from?</p>
+            <select id="dropdown" name="state">
+                <option value="" disable selected hidden></option>
+                <option value="AL">Alabama</option>
+                <option value="AK">Alaska</option>
+                <option value="AZ">Arizona</option>
+                <option value="AR">Arkansas</option>
+                <option value="CA">California</option>
+                <option value="CO">Colorado</option>
+                <option value="CT">Connecticut</option>
+                <option value="DE">Delaware</option>
+                <option value="DC">District Of Columbia</option>
+                <option value="FL">Florida</option>
+                <option value="GA">Georgia</option>
+                <option value="HI">Hawaii</option>
+                <option value="ID">Idaho</option>
+                <option value="IL">Illinois</option>
+                <option value="IN">Indiana</option>
+                <option value="IA">Iowa</option>
+                <option value="KS">Kansas</option>
+                <option value="KY">Kentucky</option>
+                <option value="LA">Louisiana</option>
+                <option value="ME">Maine</option>
+                <option value="MD">Maryland</option>
+                <option value="MA">Massachusetts</option>
+                <option value="MI">Michigan</option>
+                <option value="MN">Minnesota</option>
+                <option value="MS">Mississippi</option>
+                <option value="MO">Missouri</option>
+                <option value="MT">Montana</option>
+                <option value="NE">Nebraska</option>
+                <option value="NV">Nevada</option>
+                <option value="NH">New Hampshire</option>
+                <option value="NJ">New Jersey</option>
+                <option value="NM">New Mexico</option>
+                <option value="NY">New York</option>
+                <option value="NC">North Carolina</option>
+                <option value="ND">North Dakota</option>
+                <option value="OH">Ohio</option>
+                <option value="OK">Oklahoma</option>
+                <option value="OR">Oregon</option>
+                <option value="PA">Pennsylvania</option>
+                <option value="RI">Rhode Island</option>
+                <option value="SC">South Carolina</option>
+                <option value="SD">South Dakota</option>
+                <option value="TN">Tennessee</option>
+                <option value="TX">Texas</option>
+                <option value="UT">Utah</option>
+                <option value="VT">Vermont</option>
+                <option value="VA">Virginia</option>
+                <option value="WA">Washington</option>
+                <option value="WV">West Virginia</option>
+                <option value="WI">Wisconsin</option>
+                <option value="WY">Wyoming</option>
+            </select><br /><br />
+
+            <p>What is your favorite hobby?</p>
+            <input type="radio" name="hobbies" value="reading" id="reaID" checked>
+            <label for="read">Reading</label><br />
+            <input type="radio" name="hobbies" value="gaming" id="gameID">
+            <label for="game">Gaming</label><br />
+            <input type="radio" name="hobbies" value="drawing" id="drawID">
+            <label for="draw">Drawing</label><br /><br />
+            <p>What is/was your favorite subject in school?</p>
+            <input type="radio" name="school" value="math" id="mathID" checked>
+            <label for="mathID">Math</label><br />
+            <input type="radio" name="school" value="gym" id="gymID">
+            <label for="gymID">Gym</label><br />
+            <input type="radio" name="school" value="science" id="scienceID">
+            <label for="scienceID">Science</label><br /><br />
+            <p>And last, what do you want to do with your coding skills?</p>
+            <input type="radio" name="skills" value="makeGames" id="gamesID" checked>
+            <label for="gamesID">Make Games</label><br />
+            <input type="radio" name="skills" value="makeApps" id="appsID">
+            <label for="appsID">Build Mobile Apps</label><br />
+            <input type="radio" name="skills" value="makeWebsites" id="websitesID">
+            <label for="websitesID">Create Websites</label><br />
+        </form>
+    </div>
+    
+
 
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
