--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <form id="mainForm">
             <p> First things first, what's your name?</p>
-            <label for="firstName">Name</label>
+            <!-- <label for="firstName">Name</label> -->
             <input id="firstName" type="text"><br /><br />
 
             <p>And where are you from?</p>
@@ -73,25 +73,27 @@
             </select><br /><br />
 
             <p>What is your favorite hobby?</p>
-            <input type="radio" name="hobbies" value="reading" id="reaID" checked>
-            <label for="read">Reading</label><br />
-            <input type="radio" name="hobbies" value="gaming" id="gameID">
-            <label for="game">Gaming</label><br />
-            <input type="radio" name="hobbies" value="drawing" id="drawID">
-            <label for="draw">Drawing</label><br /><br />
+            <input type="radio" name="hobbies" value="js" id="readID" checked>
+            <label for="readID">Reading</label><br />
+            <input type="radio" name="hobbies" value="csharp" id="gameID">
+            <label for="gameID">Gaming</label><br />
+            <input type="radio" name="hobbies" value="css" id="drawID">
+            <label for="drawID">Drawing</label><br /><br />
+
             <p>What is/was your favorite subject in school?</p>
-            <input type="radio" name="school" value="math" id="mathID" checked>
+            <input type="radio" name="school" value="js" id="mathID" checked>
             <label for="mathID">Math</label><br />
-            <input type="radio" name="school" value="gym" id="gymID">
+            <input type="radio" name="school" value="csharp" id="gymID">
             <label for="gymID">Gym</label><br />
-            <input type="radio" name="school" value="science" id="scienceID">
-            <label for="scienceID">Science</label><br /><br />
+            <input type="radio" name="school" value="css" id="artID">
+            <label for="artID">Art</label><br /><br />
+
             <p>And last, what do you want to do with your coding skills?</p>
-            <input type="radio" name="skills" value="makeGames" id="gamesID" checked>
+            <input type="radio" name="skills" value="js" id="gamesID" checked>
             <label for="gamesID">Make Games</label><br />
-            <input type="radio" name="skills" value="makeApps" id="appsID">
+            <input type="radio" name="skills" value="csharp" id="appsID">
             <label for="appsID">Build Mobile Apps</label><br />
-            <input type="radio" name="skills" value="makeWebsites" id="websitesID">
+            <input type="radio" name="skills" value="css" id="websitesID">
             <label for="websitesID">Create Websites</label><br />
         </form>
     </div>
