Write function for adding answers

--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
             <label for="websitesID">Create Websites</label><br />
         </form>
     </div>
-    
+    <div class="container">
+        <h2>Results!</h2>
+        <p class="hiddenResult" id="output"></p>
+    </div>
 
 
     <script 
