--- a/index.html
+++ b/index.html
@@ -95,11 +95,12 @@
             <label for="appsID">Build Mobile Apps</label><br />
             <input type="radio" name="skills" value="css" id="websitesID">
             <label for="websitesID">Create Websites</label><br />
+            <button type="submit" class="btn">Show me my language!</button>
         </form>
     </div>
     <div class="container">
         <h2>Results!</h2>
-        <p class="hiddenResult" id="output"></p>
+        <p id="output"></p>
     </div>
 
 
