--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <label for="appsID">Build Mobile Apps</label><br />
             <input type="radio" name="skills" value="css" id="websitesID">
             <label for="websitesID">Create Websites</label><br />
-            <button type="submit" class="btn">Show me my language!</button>
+            <button type="submit" class="button">Show me my language!</button>
         </form>
     </div>
     <div class="container">
