--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link href="css/styles.css" rel="styleshet" type="text/css">
     <title>Language Selector</title>
 </head>
@@ -73,27 +72,27 @@
             </select><br /><br />
 
             <p>What is your favorite hobby?</p>
-            <input type="radio" name="hobbies" value="js" id="readID" checked>
+            <input type="radio" name="hobbies" value="1" id="readID" checked>
             <label for="readID">Reading</label><br />
-            <input type="radio" name="hobbies" value="csharp" id="gameID">
+            <input type="radio" name="hobbies" value="2" id="gameID">
             <label for="gameID">Gaming</label><br />
-            <input type="radio" name="hobbies" value="css" id="drawID">
+            <input type="radio" name="hobbies" value="3" id="drawID">
             <label for="drawID">Drawing</label><br /><br />
 
             <p>What is/was your favorite subject in school?</p>
-            <input type="radio" name="school" value="js" id="mathID" checked>
+            <input type="radio" name="school" value="1" id="mathID" checked>
             <label for="mathID">Math</label><br />
-            <input type="radio" name="school" value="csharp" id="gymID">
+            <input type="radio" name="school" value="2" id="gymID">
             <label for="gymID">Gym</label><br />
-            <input type="radio" name="school" value="css" id="artID">
+            <input type="radio" name="school" value="3" id="artID">
             <label for="artID">Art</label><br /><br />
 
             <p>And last, what do you want to do with your coding skills?</p>
-            <input type="radio" name="skills" value="js" id="gamesID" checked>
+            <input type="radio" name="skills" value="1" id="gamesID" checked>
             <label for="gamesID">Make Games</label><br />
-            <input type="radio" name="skills" value="csharp" id="appsID">
+            <input type="radio" name="skills" value="2" id="appsID">
             <label for="appsID">Build Mobile Apps</label><br />
-            <input type="radio" name="skills" value="css" id="websitesID">
+            <input type="radio" name="skills" value="3" id="websitesID">
             <label for="websitesID">Create Websites</label><br />
             <button type="submit" class="button">Show me my language!</button>
         </form>
@@ -102,12 +101,6 @@
         <h2>Results!</h2>
         <p id="output"></p>
     </div>
-
-
-    <script 
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" 
-        crossorigin="anonymous">
-    </script>   
+    <script src="js/scripts.js"></script>  
 </body>
 </html>
