Try new approach

--- a/index.html
+++ b/index.html
@@ -72,27 +72,27 @@
             </select><br /><br />
 
             <p>What is your favorite hobby?</p>
-            <input type="radio" name="hobbies" value="1" id="readID" checked>
+            <input type="radio" name="hobbies" value="1" id="readID" class="js"checked>
             <label for="readID">Reading</label><br />
-            <input type="radio" name="hobbies" value="2" id="gameID">
+            <input type="radio" name="hobbies" value="2" id="gameID" class="csharp">
             <label for="gameID">Gaming</label><br />
-            <input type="radio" name="hobbies" value="3" id="drawID">
+            <input type="radio" name="hobbies" value="3" id="drawID" class="python">
             <label for="drawID">Drawing</label><br /><br />
 
             <p>What is/was your favorite subject in school?</p>
-            <input type="radio" name="school" value="1" id="mathID" checked>
+            <input type="radio" name="school" value="1" id="mathID" class ="js" checked>
             <label for="mathID">Math</label><br />
-            <input type="radio" name="school" value="2" id="gymID">
+            <input type="radio" name="school" value="2" id="gymID" class="csharp">
             <label for="gymID">Gym</label><br />
-            <input type="radio" name="school" value="3" id="artID">
+            <input type="radio" name="school" value="3" id="artID" class="python">
             <label for="artID">Art</label><br /><br />
 
             <p>And last, what do you want to do with your coding skills?</p>
             <input type="radio" name="skills" value="1" id="gamesID" checked>
             <label for="gamesID">Make Games</label><br />
-            <input type="radio" name="skills" value="2" id="appsID">
+            <input type="radio" name="skills" value="2" id="appsID" class="csharp">
             <label for="appsID">Build Mobile Apps</label><br />
-            <input type="radio" name="skills" value="3" id="websitesID">
+            <input type="radio" name="skills" value="3" id="websitesID" class="python">
             <label for="websitesID">Create Websites</label><br />
             <button type="submit" class="button">Show me my language!</button>
         </form>
@@ -101,6 +101,6 @@
         <h2>Results!</h2>
         <p id="output"></p>
     </div>
-    <script src="js/scripts.js"></script>  
+    <script src="js/scripts2.js"></script> 
 </body>
 </html>
