--- a/index.html
+++ b/index.html
@@ -72,27 +72,27 @@
             </select><br /><br />
 
             <p>What is your favorite hobby?</p>
-            <input type="radio" name="hobbies" value="1" id="readID" class="js"checked>
+            <input type="radio" name="hobbies" value="js" id="readID" checked>
             <label for="readID">Reading</label><br />
-            <input type="radio" name="hobbies" value="2" id="gameID" class="csharp">
+            <input type="radio" name="hobbies" value="csharp" id="gameID">
             <label for="gameID">Gaming</label><br />
-            <input type="radio" name="hobbies" value="3" id="drawID" class="python">
+            <input type="radio" name="hobbies" value="python" id="drawID">
             <label for="drawID">Drawing</label><br /><br />
 
             <p>What is/was your favorite subject in school?</p>
-            <input type="radio" name="school" value="1" id="mathID" class ="js" checked>
+            <input type="radio" name="school" value="js" id="mathID" checked>
             <label for="mathID">Math</label><br />
-            <input type="radio" name="school" value="2" id="gymID" class="csharp">
+            <input type="radio" name="school" value="csharp" id="gymID">
             <label for="gymID">Gym</label><br />
-            <input type="radio" name="school" value="3" id="artID" class="python">
+            <input type="radio" name="school" value="python" id="artID">
             <label for="artID">Art</label><br /><br />
 
             <p>And last, what do you want to do with your coding skills?</p>
-            <input type="radio" name="skills" value="1" id="gamesID" checked>
+            <input type="radio" name="skills" value="js" id="gamesID" checked>
             <label for="gamesID">Make Games</label><br />
-            <input type="radio" name="skills" value="2" id="appsID" class="csharp">
+            <input type="radio" name="skills" value="csharp" id="appsID" class="csharp">
             <label for="appsID">Build Mobile Apps</label><br />
-            <input type="radio" name="skills" value="3" id="websitesID" class="python">
+            <input type="radio" name="skills" value="python" id="websitesID" class="python">
             <label for="websitesID">Create Websites</label><br />
             <button type="submit" class="button">Show me my language!</button>
         </form>
