--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <label for="appsID">Build Mobile Apps</label><br />
             <input type="radio" name="skills" value="python" id="websitesID" class="python">
             <label for="websitesID">Create Websites</label><br />
-            <button type="submit" class="button">Show me my language!</button>
+            <button type="submit" class="button" id="button">Show me my language!</button>
         </form>
     </div>
     <div class="container">
