--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="css/styles.css" rel="styleshet" type="text/css">
     <title>Language Selector</title>
 </head>
 <body>
+    <div class="heading">
     <h1>Which programming language is right for you?</h1>
     <p>Choosing a programming language to study can be a tough decision. Answer some simple questions and we'll tell you which one is right for you!</p>
+    </div>
     <div class="container">
         <form id="mainForm">
             <p> First things first, what's your name?</p>
