Remove unused code

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </form>
     </div>
     <div class="end">
-        <h2 id="results" class="hidden">Results for <span id="nameID"></span></h2>
+        <h2 id="results" class="hidden">Results:</h2>
         <p id="output"></p>
     </div>
      
